[package]
name = "lib-base64"
version = "2.0.0"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
edition = "2018"
description = "A base64 encoding and decoding library, which implements the encode() and decode() methods for the String type."
keywords = ["base64", "encoding", "padding", "method", "string"]
categories = ["encoding"]
license = "GPL-3.0"
repository = "https://github.com/nicolasbauw/lib-base64"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
